# Neptune

./: .gitmodules  CMakeLists.txt  README.md
src/: Engine.cpp
src/Neptune/: Bitboard.cpp  Bitboard.hpp  Board.cpp  Board.hpp  Core.hpp  Move.hpp
src/Tests/: Bitboard.cpp
